Fix line height on card description on mobile

--- a/src/components/RideTo/CourseTypeItem/CourseTypeItem.scss
+++ b/src/components/RideTo/CourseTypeItem/CourseTypeItem.scss
@@ -43,7 +43,7 @@
   opacity: 0.5;
   color: #141414;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 18px;
 }
 
 .cta {
